[package]
name = "meteor-virtualize"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
workspace = ".."

[dependencies]
quote = { git = 'https://github.com/dtolnay/quote'}
proc-macro2 = "0.1"
syn = { path = "../../syn" , features = ["full", "extra-traits"] } # TODO
synom = { path = "../../syn/synom" } # TODO
